--- a/main.html
+++ b/main.html
@@ -7,6 +7,25 @@
 </head>
 
 <body>
+	<h1>Manali</h1> <br>
+	<p>It is a rustic enclave known for its cool climate and snow-capped mountains, offering respite to tourists escaping scorching heat of the plains. The tourism industry in Manali started booming only in the early 20th century, mainly because of its natural bounties and salubrious climate.</p>
+	<ol> <b><em>
+		<li>its bEATIFULL</li>
+			<li>its bEATIFULL</li>
+			<li>its bEATIFULL</li>
+			<li>its bEATIFULL</li>
+			<li>its bEATIFULL</li>
+		
+		
+	</ol>
+	<ul>
+		<li>partha </li>
+		<li>partha </li>
+		<li>partha </li>
+		<li>partha </li>
+		<li>partha </li>
+		</b></em>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
