--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-	<h1>Manali</h1> <br>
-	<p>It is a rustic enclave known for its cool climate and snow-capped mountains, offering respite to tourists escaping scorching heat of the plains. The tourism industry in Manali started booming only in the early 20th century, mainly because of its natural bounties and salubrious climate.</p>
+	<h1>Manali</h1> <hr>
+	<p> Manali is a high-altitude Himalayan resort town in India’s northern Himachal Pradesh state. It has a reputation as a backpacking center and honeymoon destination. Set on the Beas River, it’s a gateway for skiing in the Solang Valley and trekking in Parvati Valley. It's also a jumping-off point for paragliding, rafting and mountaineering in the Pir Panjal mountains, home to 4,000m-high Rohtang Pass.It is a rustic enclave known for its cool climate and snow-capped mountains, offering respite to tourists escaping scorching heat of the plains. The tourism industry in Manali started booming only in the early 20th century, mainly because of its natural bounties and salubrious climate.</p>
 	<ol> <b><em>
 		<li>its bEATIFULL</li>
 			<li>its bEATIFULL</li>
