--- a/main.html
+++ b/main.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
-
 <html>
-
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
-
-<body>
-	<h1>Manali</h1> <hr>
-	<p> Manali is a high-altitude Himalayan resort town in India’s northern Himachal Pradesh state. It has a reputation as a backpacking center and honeymoon destination. Set on the Beas River, it’s a gateway for skiing in the Solang Valley and trekking in Parvati Valley. It's also a jumping-off point for paragliding, rafting and mountaineering in the Pir Panjal mountains, home to 4,000m-high Rohtang Pass.It is a rustic enclave known for its cool climate and snow-capped mountains, offering respite to tourists escaping scorching heat of the plains. The tourism industry in Manali started booming only in the early 20th century, mainly because of its natural bounties and salubrious climate.</p>
-	<ol> <b><em>
-		<li>its bEATIFULL</li>
-			<li>its bEATIFULL</li>
-			<li>its bEATIFULL</li>
-			<li>its bEATIFULL</li>
-			<li>its bEATIFULL</li>
-		
-		</b></em>
-	</ol>
-		
-	<ul>
-		<b><em>
-		<li>partha </li>
-		<li>partha </li>
-		<li>partha </li>
-		<li>partha </li>
-		<li>partha </li>
-			<li>partha </li>
-		</b></em>
-	</ul>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
-</body>
-
+  <head>
+    <title>My Favorite Holiday Destination</title>
+  </head>
+  <body>
+    <h1>Japan</h1>
+    <br>
+    <p>Japan is a beautiful and unique country located in East Asia. Known for its rich culture, delicious cuisine, and breathtaking scenery, Japan is a must-visit destination for any traveler.</p>
+    <ol>
+      <li><strong>The Great Buddha of Kamakura:</strong> This bronze statue of Amida Buddha is one of the most iconic and recognizable landmarks in Japan.</li>
+      <li><strong>Mt. Fuji:</strong> This active volcano is the highest mountain in Japan and a symbol of the country's natural beauty.</li>
+      <li><strong>Hiroshima Peace Memorial Park:</strong> This park is a somber reminder of the atomic bomb that was dropped on Hiroshima during World War II and serves as a tribute to the victims.</li>
+      <li><strong>Kyoto's Temples and Shrines:</strong> Kyoto is home to some of the most beautiful and historically significant temples and shrines in Japan, such as the Kiyomizu-dera and Fushimi Inari Taisha.</li>
+      <li><strong>Shibuya Crossing:</strong> This famous intersection in Tokyo is one of the busiest in the world and a great place to people-watch and take photos.</li>
+    </ol>
+    <ul>
+      <li><em>Sushi:</em> Japan is famous for its fresh and delicious sushi, which can be found in many restaurants and sushi bars throughout the country.</li>
+      <li><em>Ramen:</em> This noodle soup dish is a staple of Japanese cuisine and comes in many different varieties, from rich and creamy to spicy and savory.</li>
+      <li><em>Takoyaki:</em> These fried octopus balls are a popular street food in Japan and are often served with a variety of toppings such as mayo, bonito flakes, and green onion.</li>
+      <li><em>Mochi:</em> This sweet rice cake dessert comes in many different flavors and is often served with green tea or red bean paste.</li>
+      <li><em>Matcha:</em> This green tea powder is a beloved beverage in Japan and is often used in traditional tea ceremonies and desserts.</li>
+    </ul>
+  </body>
 </html>
