--- a/main.html
+++ b/main.html
@@ -4,8 +4,8 @@
     <title>My Favorite Holiday Destination</title>
   </head>
   <body>
-    <h1>Japan</h1>
-    <br>
+    <h1>Japan</h1> <hr>
+    
     <p>Japan is a beautiful and unique country located in East Asia. Known for its rich culture, delicious cuisine, and breathtaking scenery, Japan is a must-visit destination for any traveler.</p>
     <ol>
       <li><strong>The Great Buddha of Kamakura:</strong> This bronze statue of Amida Buddha is one of the most iconic and recognizable landmarks in Japan.</li>
